--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.17.5",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
+    "dotenv-webpack": "^7.1.0",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
-    "@babel/core": "^7.17.5"
+    "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "node-sass": "^7.0.1",
+    "normalize.css": "^8.0.1",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0"
   }
 }
